# brick_game_v2

brick_game/snake/: constants.h  snake_controller.hpp  snake_model.cpp  snake_model.hpp  snake_objects.hpp
brick_game/tetris/: tetris_lib.c  tetris_lib.h  tetris_objects.h
gui/cli/: cli_view.c  cli_view.h  main.c
gui/desktop/: CMakeLists.txt  game_desktop_view.cpp  game_desktop_view.hpp  game_desktop_view.ui  main.cpp  menu_desktop_view.cpp  menu_desktop_view.hpp  menu_desktop_view.ui
